app/static/css/theme/editor/_main.scss
editor-page-container{
	display:flex;
	height:100vh;
	width:100%;
	aside{
		width:245px;
		padding-top:15px;
	}
	main{
		flex-grow:1;
		height:100%;
		display:flex;
		flex-direction: column;
		.page-editor-container{
			flex-grow:1;
		}
	}
}

#editor-form{
	flex-grow:1;
	height:100%;
	.ace_editor{
		height:100%;
	}
}

aside{
	& > .page-editor-sidebar-group:not(:last-of-type){
		margin-bottom:0.88rem;
	}
}
.page-editor-sidebar-group{
	padding:0 0.65rem;
}

.editor-tabs{
	display:flex;
	padding:12px 1rem 0 1rem;
	align-items:flex-end;
	background-color:rgb(200,200,200);

	.editor-tab-button-container{
		button{
			font-size:0.9rem;
			padding:0.25rem 1rem;
			min-width:145px;
			text-align:left;
			margin-right:14px;
			border:none;
			background-color:rgb(220,220,220);

			&.selected{
				background-color:map-get($theme-colors, primary);
				color:color-contrast(map-get($theme-colors, primary));
			}
		}
	}
}

